Update contact information in the footer section

--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3 data-i18n="contact.email">Email</h3>
-                            <p>kontakt@mmmconsulting.pl</p>
+                            <p>m.wielkopolan@mmmconsulting.pl</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📞</div>
                         <div class="contact-details">
                             <h3 data-i18n="contact.phone">Telefon</h3>
-                            <p>+48 123 456 789</p>
+                            <p>+48 123 xxx xxx</p>
                         </div>
                     </div>
                     <div class="contact-item">
