--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3 data-i18n="contact.email">Email</h3>
+                            <p>m.czarnecki@mmmconsulting.pl</p>
                             <p>m.wielkopolan@mmmconsulting.pl</p>
                         </div>
                     </div>
