Update contact details and enhance team member photo styling for improved presentation

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <!-- Team Member 1 -->
                 <div class="team-member">
                     <div class="team-photo">
-                        <img src="imgs/pfp_czarnecki.png" alt="Marcin Czarnecki">
+                        <img src="imgs/pfp_czarnecki.png" alt="Marcin Czarnecki" class="zoomed">
                     </div>
                     <div class="team-info">
                         <h3 class="team-name">Marcin Czarnecki</h3>
@@ -503,14 +503,15 @@
                         <div class="contact-icon">📞</div>
                         <div class="contact-details">
                             <h3 data-i18n="contact.phone">Telefon</h3>
-                            <p>+48 123 xxx xxx</p>
+                            <p>+48 505 829 720</p>
+                            <p>+48 501 113 099</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📍</div>
                         <div class="contact-details">
                             <h3 data-i18n="contact.address">Adres</h3>
-                            <p data-i18n="contact.addressValue">Warszawa, Polska</p>
+                            <p data-i18n="contact.addressValue">Grzybowska 87, 00-844 Warszawa</p>
                         </div>
                     </div>
                 </div>
