Update benefit titles for clarity and improved messaging

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="benefit-card">
                     <div class="benefit-header">
                         <div class="benefit-number">1</div>
-                        <div class="benefit-title" data-i18n="benefits.title1">Stabilność</div>
+                        <div class="benefit-title" data-i18n="benefits.title1">Stabilność i Rentowność Biznesu</div>
                     </div>
                     <div class="benefit-content">
                         <p data-i18n="benefits.1">Wzmocnienie stabilności i rentowności dzięki lepszej kontroli kosztów energii, surowców i materiałów oraz skutecznemu zarządzaniu ryzykiem klimatycznym i regulacyjnym.</p>
@@ -61,7 +61,7 @@
                 <div class="benefit-card">
                     <div class="benefit-header">
                         <div class="benefit-number">2</div>
-                        <div class="benefit-title" data-i18n="benefits.title2">Sprzedaż</div>
+                        <div class="benefit-title" data-i18n="benefits.title2">Sprzedaż Produktów i Usług</div>
                     </div>
                     <div class="benefit-content">
                         <p data-i18n="benefits.2">Budowanie realnej przewagi w sprzedaży i przetargach u kluczowych klientów w oparciu o standardy zrównoważonego rozwoju.</p>
@@ -71,7 +71,7 @@
                 <div class="benefit-card">
                     <div class="benefit-header">
                         <div class="benefit-number">3</div>
-                        <div class="benefit-title" data-i18n="benefits.title3">Finansowanie</div>
+                        <div class="benefit-title" data-i18n="benefits.title3">Finansowanie Rozwoju</div>
                     </div>
                     <div class="benefit-content">
                         <p data-i18n="benefits.3">Otwarcie dostępu do dotacji, ulg i korzystniejszego finansowania inwestycji rozwojowych dzięki spełnianiu kryteriów środowiskowych.</p>
@@ -91,7 +91,7 @@
                 <div class="benefit-card">
                     <div class="benefit-header">
                         <div class="benefit-number">5</div>
-                        <div class="benefit-title" data-i18n="benefits.title5">Zgodność</div>
+                        <div class="benefit-title" data-i18n="benefits.title5">Zgodność z Regulacjami</div>
                     </div>
                     <div class="benefit-content">
                         <p data-i18n="benefits.5">Zapewnienie pełnej zgodności z wymaganiami regulacyjnymi i raportowymi w zakresie adekwatnym do skali oraz profilu Twojej działalności.</p>
@@ -101,7 +101,7 @@
                 <div class="benefit-card">
                     <div class="benefit-header">
                         <div class="benefit-number">6</div>
-                        <div class="benefit-title" data-i18n="benefits.title6">Efektywność</div>
+                        <div class="benefit-title" data-i18n="benefits.title6">Przewagi Konkurencyjne</div>
                     </div>
                     <div class="benefit-content">
                         <p data-i18n="benefits.6">Rozwój przewag konkurencyjnych opartych o proste i wydajne procesy i pragmatyczny plan działania.</p>
