Update contact section terminology for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#services" class="nav-link" data-i18n="nav.services">Nasze Usługi</a></li>
                 <li><a href="#about" class="nav-link" data-i18n="nav.about">O nas</a></li>
                 <li><a href="#team" class="nav-link" data-i18n="nav.team">Zespół</a></li>
-                <li><a href="#contact" class="nav-link" data-i18n="nav.contact">Kontakt</a></li>
+                <li><a href="#contact" class="nav-link" data-i18n="nav.contact">Adres</a></li>
             </ul>
             <div class="lang-toggle">
                 <button class="lang-btn active" data-lang="pl">PL</button>
@@ -304,25 +304,9 @@
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
-            <h2 class="section-title" data-i18n="contact.title">Kontakt</h2>
+            <h2 class="section-title" data-i18n="contact.title">Adres</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon"><img src="imgs/icon_email.png" alt="Email"></div>
-                        <div class="contact-details">
-                            <h3 data-i18n="contact.email">Email</h3>
-                            <p>m.czarnecki@mmmconsulting.pl</p>
-                            <p>m.wielkopolan@mmmconsulting.pl</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon"><img src="imgs/icon_phone.png" alt="Telefon"></div>
-                        <div class="contact-details">
-                            <h3 data-i18n="contact.phone">Telefon</h3>
-                            <p>+48 505 829 720</p>
-                            <p>+48 501 113 099</p>
-                        </div>
-                    </div>
                     <div class="contact-item">
                         <div class="contact-icon"><img src="imgs/icon_location.png" alt="Adres"></div>
                         <div class="contact-details">
