Refactor contact address display for improved styling and readability

--- a/index.html
+++ b/index.html
@@ -310,8 +310,7 @@
                     <div class="contact-item">
                         <div class="contact-icon"><img src="imgs/icon_location.png" alt="Adres"></div>
                         <div class="contact-details">
-                            <h3 data-i18n="contact.address">Adres</h3>
-                            <p data-i18n="contact.addressValue">Grzybowska 87, 00-844 Warszawa</p>
+                            <p class="address-text" data-i18n="contact.addressValue">Grzybowska 87, 00-844 Warszawa</p>
                         </div>
                     </div>
                 </div>
